--- a/app/assets/stylesheets/quick_mover.css.scss
+++ b/app/assets/stylesheets/quick_mover.css.scss
@@ -18,6 +18,16 @@ $grayMediumLight: #eaeaea;
   box-sizing: border-box;
 }
 
+/* miscellaneous */
+
+.debug_dump {
+  clear: both;
+  float: left;
+  width: 100%;
+  margin-top: 45px;
+  @include box_sizing;
+}
+
 /* universal */
 
 html {
@@ -116,4 +126,17 @@ input, textarea, select, .uneditable-input {
 
 input {
   height: auto !important;
+}
+
+#error_explanation {
+  color: #f00;
+  ul {
+    list-style: none;
+    margin: 0 0 18px 0;
+  }
+}
+
+.field_with_errors {
+  @extend .control-group;
+  @extend .error;
 }
