--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,24 +1,23 @@
 <% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
+<h1>Create your account</h1>
 
 <div class="row">
   <div class="span6 offset3">
     <%= form_for(@user) do |f| %>
 
+        <%= render 'shared/error_messages' %>
+
         <%= f.label :name %>
         <%= f.text_field :name %>
 
-        <%= f.label :email %>
+        <%= f.label :email, "Email" %>
         <%= f.text_field :email %>
 
         <%= f.label :phone_number %>
-        <%= f.text_field :email %>
+        <%= f.text_field :phone_number %>
 
         <%= f.label :location %>
-        <%= f.text_field :email %>
-
-        <%= f.label :user_name %>
-        <%= f.text_field :email %>
+        <%= f.text_field :location %>
 
         <%= f.label :password %>
         <%= f.password_field :password %>
