--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,15 @@
       <h1>
         <%= @user.name %>
       </h1>
+      <h1>
+        <%= @user.email %>
+      </h1>
+      <h1>
+        <%= @user.phone_number %>
+      </h1>
+      <h1>
+        <%= @user.location %>
+      </h1>
     </section>
   </aside>
 </div>
