--- a/app/assets/stylesheets/quick_mover.css.scss
+++ b/app/assets/stylesheets/quick_mover.css.scss
@@ -77,6 +77,20 @@ h2 {
   color: #999;
 }
 
+h3 {
+  font-size: 2em;
+  letter-spacing: -2px;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+h5 {
+  font-size: 1.5em;
+  letter-spacing: -2px;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
 p {
   font-size: 1.1em;
   line-height: 1.7em;
@@ -139,4 +153,45 @@ input {
 .field_with_errors {
   @extend .control-group;
   @extend .error;
+}
+
+
+/* orders */
+
+.orders {
+  list-style: none;
+  margin: 10px 0 0 0;
+
+  li {
+    padding: 10px 0;
+    border-top: 1px solid #e8e8e8;
+  }
+}
+.content {
+  display: block;
+}
+.timestamp {
+  color: $grayLight;
+}
+.gravatar {
+  float: left;
+  margin-right: 10px;
+}
+aside {
+  textarea {
+    height: 100px;
+    margin-bottom: 5px;
+  }
+
+  /* table */
+  @media (min-width: 768px) {
+    .textareawidth {
+      width:500px;
+    }
+  }
+  @media (max-width: 767px) {
+    .textareawidth {
+
+    }
+  }
 }
